[package]
# Name of the project & output binary, used by crates.io
name = "foo"
# crate version number, using Semantic Versioning
version = "0.1.0"
# List of crate authors, used when publishing the crate
authors = ["Karan Godara <karan@getquilt.app>"]

edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Dependencies section allows for adding dependencies to the project
[dependencies]
clap = "2.27.1" # from crates.io
rand = { git = "https://github.com/rust-lang-nursery/rand" } # from online repo
# bar = { path = "../bar" } # from a path in the local filesystem
